Remove plus sign from translation strings

--- a/translations/ui-inventory/ar.json
+++ b/translations/ui-inventory/ar.json
@@ -18,24 +18,24 @@
     "editInstance": "تحرير المثال",
     "showNotes": "عرض الملاحظات",
     "instanceDetails": "تفاصيل المثال",
-    "addHoldings": "+ إضافة مقتنيات",
+    "addHoldings": "إضافة مقتنيات",
     "itemDotStatus": "المادة.  {status}",
     "instances": "الأمثلة",
     "instance": "المثال:",
     "holdings": "المقتنيات",
     "holdingsColon": "المقتنيات: ",
     "alternativeTitles": "العناوين البديلة",
-    "addAlternativeTitles": "+ إضافة عنوان بديل",
+    "addAlternativeTitles": "إضافة عنوان بديل",
     "classifications": "التصنيفات",
-    "addClassifications": "+ إضافة تصنيف",
+    "addClassifications": "إضافة تصنيف",
     "selectClassification": "حدد نوع التصنيف",
     "number": "الرقم *",
     "type": "النوع *",
     "contributors": "المساهمون",
-    "addContributors": "+ إضافة مساهم",
+    "addContributors": "إضافة مساهم",
     "physicalDescription": "الوصف المادي",
     "physicalDescriptions": "الأوصاف المادية",
-    "addDescription": "+ إضافة وصف",
+    "addDescription": "إضافة وصف",
     "permanentLocation": "الموقع الدائم",
     "selectPermanentLocation": "حدد الموقع الدائم",
     "selectPlatform": "اختر منصة",
@@ -43,7 +43,7 @@
     "uri": "URI",
     "identifier": "المعرّف *",
     "identifiers": "المعرّفات",
-    "addIdentifier": "+ إضافة معرّف",
+    "addIdentifier": "إضافة معرّف",
     "selectResourceType": "اختر نوع المورد",
     "formats": "التنسيقات",
     "format": "تنسيق",
@@ -63,22 +63,22 @@
     "numberOfPieces": "عدد القطع",
     "language": "اللغة",
     "languages": "اللغات",
-    "addLanguage": "+ إضافة لغة",
+    "addLanguage": "إضافة لغة",
     "selectLanguage": "اختر اللغة",
     "note": "ملاحظة",
-    "addNote": "+ إضافة ملاحظة",
+    "addNote": "إضافة ملاحظة",
     "addNotes": "إضافة ملاحظات",
     "removeNotes": "إزالة الملاحظات {num}",
     "remove": "إزالة",
     "publications": "المنشورات",
-    "addPublication": "+ إضافة منشور",
+    "addPublication": "إضافة منشور",
     "seriesStatements": "بيانات السلاسل",
-    "addSeries": "+ إضافة سلسلة",
+    "addSeries": "إضافة سلسلة",
     "subjects": "الموضوعات",
-    "addSubject": "+ إضافة موضوع",
+    "addSubject": "إضافة موضوع",
     "url": "عنوان URL",
     "urls": "عناوين URL",
-    "addUrl": "+ إضافة عنوان URL",
+    "addUrl": "إضافة عنوان URL",
     "items": "المواد",
     "addNewItemDialog": "مربع حوار إضافة مادة جديدة",
     "loanTypes": "أنواع الإعارة",
@@ -118,7 +118,7 @@
     "seriesStatement": "بيان السلسلة",
     "editInstanceDialog": "مربع حوار تحرير المثال",
     "addNewHoldingsDialog": "مربع حوار إضافة مقتنيات جديدة",
-    "addItem": "+ إضافة مادة",
+    "addItem": "إضافة مادة",
     "viewItem": "عرض المادة",
     "itemData": "بيانات المادة",
     "temporaryLocation": "الموقع المؤقت",
@@ -176,13 +176,13 @@
     "materialsSpecification": "المواد المحددة",
     "publisherRole": "دور الناشر",
     "publicationFrequency": "تواتر النشر",
-    "addPublicationFrequency": "+ إضافة تواتر",
-    "addPublicationRange": "+ إضافة نطاق",
+    "addPublicationFrequency": "إضافة تواتر",
+    "addPublicationRange": "إضافة نطاق",
     "publicationRange": "نطاق النشر",
     "staffSuppress": "منع الموظفين",
     "discoverySuppress": "منع من الاكتشاف",
     "previouslyHeld": "حجزت سابقا",
-    "addElectronicAccess": "+ إضافة الوصول الإلكتروني",
+    "addElectronicAccess": "إضافة الوصول الإلكتروني",
     "instanceStatus": "مصطلح حالة المثال",
     "selectInstanceStatus": "حدد حالة المثال",
     "selectModeOfIssuance": "حدد وضع الإصدار",
@@ -195,14 +195,14 @@
     "instances.columns.publishers": "الناشرون",
     "instances.columns.relation": "الصلة",
     "editions": "الطبعات",
-    "addEdition": "+ إضافة طبعة",
+    "addEdition": "إضافة طبعة",
     "indexTitle": "عنوان الفهرس",
     "dateOfPublication": "تاريخ النشر",
     "otherRelatedInstances": "أمثلة أخرى ذات صلة",
     "instanceRelationships": "صلات المثال",
     "instanceFormat": "تنسيق",
     "instanceFormats": "التنسيقات",
-    "addInstanceFormat": "+ إضافة تنسيق",
+    "addInstanceFormat": "إضافة تنسيق",
     "selectInstanceFormat": "اختر تنسيق",
     "copyItem": "نسخ المادة",
     "resourceTypeTerm": "مصطلح نوع المورد",
@@ -242,11 +242,11 @@
     "acquisitionMethod": "طريقة التزويد",
     "acquisitionFormat": "تنسيق التزويد",
     "electronicBookplate": "لوحة الكتاب الالكترونية",
-    "add": "+ إضافة",
-    "addFormerHoldingsId": "+ إضافة معرّف المقتنيات السابق",
-    "addHoldingsStatement": "+ إضافة بيان المقتنيات",
-    "addHoldingsStatementForIndexes": "+ إضافة بيان المقتنيات للفهارس",
-    "addHoldingsStatementForSupplements": "+إضافة بيان المقتنيات للمكملات",
+    "add": "إضافة",
+    "addFormerHoldingsId": "إضافة معرّف المقتنيات السابق",
+    "addHoldingsStatement": "إضافة بيان المقتنيات",
+    "addHoldingsStatementForIndexes": "إضافة بيان المقتنيات للفهارس",
+    "addHoldingsStatementForSupplements": "إضافة بيان المقتنيات للمكملات",
     "relatedInstances": "الحالات ذات الصلة",
     "instanceRelationshipsAnalyticsBoundWith": "صلات الأمثلة (التحليلات والارتباطات)",
     "instanceStatusTypes": "أنواع حالة المثال",
