--- a/translations/ui-inventory/it_IT.json
+++ b/translations/ui-inventory/it_IT.json
@@ -18,24 +18,24 @@
     "editInstance": "Edit Instance",
     "showNotes": "Show Notes",
     "instanceDetails": "Instance Details",
-    "addHoldings": "+ Add holdings",
+    "addHoldings": "Add holdings",
     "itemDotStatus": "Item . {status}",
     "instances": "Instances",
     "instance": "Instance:",
     "holdings": "Holdings",
     "holdingsColon": "Holdings:",
     "alternativeTitles": "Alternative titles",
-    "addAlternativeTitles": "+ Add alternative title",
+    "addAlternativeTitles": "Add alternative title",
     "classifications": "Classifications",
-    "addClassifications": "+ Add classification",
+    "addClassifications": "Add classification",
     "selectClassification": "Select classification type",
     "number": "Number *",
     "type": "Type *",
     "contributors": "Contributors",
-    "addContributors": "+ Add contributor",
+    "addContributors": "Add contributor",
     "physicalDescription": "Physical description",
     "physicalDescriptions": "Physical descriptions",
-    "addDescription": "+ Add description",
+    "addDescription": "Add description",
     "permanentLocation": "Permanent Location",
     "selectPermanentLocation": "Select permanent location",
     "selectPlatform": "Select platform",
@@ -43,7 +43,7 @@
     "uri": "URI",
     "identifier": "Identifier *",
     "identifiers": "Identifiers",
-    "addIdentifier": "+ Add identifier",
+    "addIdentifier": "Add identifier",
     "selectResourceType": "Select resource type",
     "formats": "Formats",
     "format": "Format",
@@ -63,22 +63,22 @@
     "numberOfPieces": "Number of pieces",
     "language": "Language",
     "languages": "Languages",
-    "addLanguage": "+ Add language",
+    "addLanguage": "Add language",
     "selectLanguage": "Select language",
     "note": "Note",
-    "addNote": "+ Add note",
+    "addNote": "Add note",
     "addNotes": "Add Notes",
     "removeNotes": "Remove Notes {num}",
     "remove": "Remove",
     "publications": "Publications",
-    "addPublication": "+ Add publication",
+    "addPublication": "Add publication",
     "seriesStatements": "Series statements",
-    "addSeries": "+ Add series",
+    "addSeries": "Add series",
     "subjects": "Subjects",
-    "addSubject": "+ Add subject",
+    "addSubject": "Add subject",
     "url": "URL",
     "urls": "URLs",
-    "addUrl": "+ Add URL",
+    "addUrl": "Add URL",
     "items": "Items",
     "addNewItemDialog": "Add New Item Dialog",
     "loanTypes": "Loan types",
@@ -118,7 +118,7 @@
     "seriesStatement": "Series Statement",
     "editInstanceDialog": "Edit Instance Dialog",
     "addNewHoldingsDialog": "Add New Holdings Dialog",
-    "addItem": "+ Add item",
+    "addItem": "Add item",
     "viewItem": "View Item",
     "itemData": "Item data",
     "temporaryLocation": "Temporary location",
@@ -176,13 +176,13 @@
     "materialsSpecification": "Materials specified",
     "publisherRole": "Publisher role",
     "publicationFrequency": "Publication frequency",
-    "addPublicationFrequency": "+ Add frequency",
-    "addPublicationRange": "+ Add range",
+    "addPublicationFrequency": "Add frequency",
+    "addPublicationRange": "Add range",
     "publicationRange": "Publication range",
     "staffSuppress": "Staff suppress",
     "discoverySuppress": "Suppress from discovery",
     "previouslyHeld": "Previously held",
-    "addElectronicAccess": "+ Aggiungi accesso elettronico",
+    "addElectronicAccess": "Aggiungi accesso elettronico",
     "instanceStatus": "Instance status term",
     "selectInstanceStatus": "Seleziona lo stato dell'istanza",
     "selectModeOfIssuance": "Seleziona la modalità di emissione",
@@ -195,14 +195,14 @@
     "instances.columns.publishers": "Editori",
     "instances.columns.relation": "Legame",
     "editions": "Editions",
-    "addEdition": "+ Add edition",
+    "addEdition": "Add edition",
     "indexTitle": "Index title",
     "dateOfPublication": "Date of publication",
     "otherRelatedInstances": "Other related instances",
     "instanceRelationships": "Instance relationships",
     "instanceFormat": "Format",
     "instanceFormats": "Formats",
-    "addInstanceFormat": "+ Add format",
+    "addInstanceFormat": "Add format",
     "selectInstanceFormat": "Select format",
     "copyItem": "Copy item",
     "resourceTypeTerm": "Resource type term",
@@ -242,11 +242,11 @@
     "acquisitionMethod": "Acquisition method",
     "acquisitionFormat": "Acquisition format",
     "electronicBookplate": "Electronic bookplate",
-    "add": "+ Add",
-    "addFormerHoldingsId": "+ Add former holdings ID",
-    "addHoldingsStatement": "+ Add holdings statement",
-    "addHoldingsStatementForIndexes": "+ Add holdings statement for indexes",
-    "addHoldingsStatementForSupplements": "+ Add holdings statement for supplements",
+    "add": "Add",
+    "addFormerHoldingsId": "Add former holdings ID",
+    "addHoldingsStatement": "Add holdings statement",
+    "addHoldingsStatementForIndexes": "Add holdings statement for indexes",
+    "addHoldingsStatementForSupplements": "Add holdings statement for supplements",
     "relatedInstances": "Related instances",
     "instanceRelationshipsAnalyticsBoundWith": "Instance relationships (analytics and bound-with)",
     "instanceStatusTypes": "Instance status types",
