--- a/translations/ui-inventory/pt_BR.json
+++ b/translations/ui-inventory/pt_BR.json
@@ -18,24 +18,24 @@
     "editInstance": "Editar instância",
     "showNotes": "Mostrar notas",
     "instanceDetails": "Detalhes da instância",
-    "addHoldings": "+ Adicionar acervo",
+    "addHoldings": "Adicionar acervo",
     "itemDotStatus": "Item . {status}",
     "instances": "Instâncias",
     "instance": "Instância:",
     "holdings": "Acervo",
     "holdingsColon": "Acervo:",
     "alternativeTitles": "Títulos alternativos",
-    "addAlternativeTitles": "+ Adicionar título alternativo",
+    "addAlternativeTitles": "Adicionar título alternativo",
     "classifications": "Classificações",
-    "addClassifications": "+ Adicionar classificação",
+    "addClassifications": "Adicionar classificação",
     "selectClassification": "Selecione o tipo de classificação",
     "number": "Número *",
     "type": "Tipo *",
     "contributors": "Colaboradores",
-    "addContributors": "+ Adicionar colaborador",
+    "addContributors": "Adicionar colaborador",
     "physicalDescription": "Descrição física",
     "physicalDescriptions": "Descrições físicas",
-    "addDescription": "+ Adicionar descrição",
+    "addDescription": "Adicionar descrição",
     "permanentLocation": "Localização permanente",
     "selectPermanentLocation": "Selecione a localização permanente",
     "selectPlatform": "Selecione a plataforma",
@@ -43,7 +43,7 @@
     "uri": "URI",
     "identifier": "Identificador *",
     "identifiers": "Identificadores",
-    "addIdentifier": "+ Adicionar identificador",
+    "addIdentifier": "Adicionar identificador",
     "selectResourceType": "Selecione o tipo de recurso",
     "formats": "Formatos",
     "format": "Formato",
@@ -63,22 +63,22 @@
     "numberOfPieces": "Número de peças",
     "language": "Idioma",
     "languages": "Idiomas",
-    "addLanguage": "+ Adicionar idioma",
+    "addLanguage": "Adicionar idioma",
     "selectLanguage": "Selecione o idioma",
     "note": "Nota",
-    "addNote": "+ Adicionar nota",
+    "addNote": "Adicionar nota",
     "addNotes": "Adicionar notas",
     "removeNotes": "Remover notas {num}",
     "remove": "Remover",
     "publications": "Publicações",
-    "addPublication": "+ Adicionar publicação",
+    "addPublication": "Adicionar publicação",
     "seriesStatements": "Declaração de série",
-    "addSeries": "+ Adicionar série",
+    "addSeries": "Adicionar série",
     "subjects": "Assuntos",
-    "addSubject": "+ Adicionar assunto",
+    "addSubject": "Adicionar assunto",
     "url": "URL",
     "urls": "URLs",
-    "addUrl": "+ Adicionar URL",
+    "addUrl": "Adicionar URL",
     "items": "Itens",
     "addNewItemDialog": "Adicionar caixa de diálogo de novo item",
     "loanTypes": "Tipos de empréstimo",
@@ -118,7 +118,7 @@
     "seriesStatement": "Declaração de série",
     "editInstanceDialog": "Editar caixa de diálogo da instância",
     "addNewHoldingsDialog": "Adicionar nova caixa de diálogo de acervo",
-    "addItem": "+ Adicionar item",
+    "addItem": "Adicionar item",
     "viewItem": "Ver item",
     "itemData": "Dados do item",
     "temporaryLocation": "Localização temporária",
@@ -176,13 +176,13 @@
     "materialsSpecification": "Materiais especificados",
     "publisherRole": "Função do editor",
     "publicationFrequency": "Frequência de publicação",
-    "addPublicationFrequency": "+ Adicionar frequência",
-    "addPublicationRange": "+ Adicionar intervalo",
+    "addPublicationFrequency": "Adicionar frequência",
+    "addPublicationRange": "Adicionar intervalo",
     "publicationRange": "Intervalo de publicação",
     "staffSuppress": "Ocultar para a equipe",
     "discoverySuppress": "Ocultar na ferramenta de descoberta",
     "previouslyHeld": "Anteriormente realizada",
-    "addElectronicAccess": "+ Adicionar acesso eletrônico",
+    "addElectronicAccess": "Adicionar acesso eletrônico",
     "instanceStatus": "Termo do status da instância",
     "selectInstanceStatus": "Selecione o status da instância",
     "selectModeOfIssuance": "Selecione o modo de emissão",
@@ -195,14 +195,14 @@
     "instances.columns.publishers": "Editores",
     "instances.columns.relation": "Relação",
     "editions": "Edições",
-    "addEdition": "+ Adicionar edição",
+    "addEdition": "Adicionar edição",
     "indexTitle": "Título do índice",
     "dateOfPublication": "Data da publicação",
     "otherRelatedInstances": "Outras instâncias relacionadas",
     "instanceRelationships": "Relacionamentos de instâncias",
     "instanceFormat": "Formato",
     "instanceFormats": "Formatos",
-    "addInstanceFormat": "+ Adicionar formato",
+    "addInstanceFormat": "Adicionar formato",
     "selectInstanceFormat": "Selecione o formato",
     "copyItem": "Copiar item",
     "resourceTypeTerm": "Termo do tipo de recurso",
@@ -242,11 +242,11 @@
     "acquisitionMethod": "Método de aquisição",
     "acquisitionFormat": "Formato de aquisição",
     "electronicBookplate": "Etiqueta de livro eletrônica",
-    "add": "+ Adicionar",
-    "addFormerHoldingsId": "+ Adicionar ID de ex-acervo",
-    "addHoldingsStatement": "+ Adicionar declaração de acervo",
-    "addHoldingsStatementForIndexes": "+ Adicionar declaração de acervo para índices",
-    "addHoldingsStatementForSupplements": "+ Adicionar declaração de acervo para suplementos",
+    "add": "Adicionar",
+    "addFormerHoldingsId": "Adicionar ID de ex-acervo",
+    "addHoldingsStatement": "Adicionar declaração de acervo",
+    "addHoldingsStatementForIndexes": "Adicionar declaração de acervo para índices",
+    "addHoldingsStatementForSupplements": "Adicionar declaração de acervo para suplementos",
     "relatedInstances": "Instâncias relacionadas",
     "instanceRelationshipsAnalyticsBoundWith": "Relacionamentos entre instâncias (analiticas e encadernado com)",
     "instanceStatusTypes": "Tipos de status da instância",
