--- a/translations/ui-inventory/de.json
+++ b/translations/ui-inventory/de.json
@@ -18,24 +18,24 @@
     "editInstance": "Instanz bearbeiten",
     "showNotes": "Anmerkungen anzeigen",
     "instanceDetails": "Instanzdetails",
-    "addHoldings": "+ Bestand hinzufügen",
+    "addHoldings": "Bestand hinzufügen",
     "itemDotStatus": "Exemplar . {status}",
     "instances": "Instanzen",
     "instance": "Instanz:",
     "holdings": "Bestand",
     "holdingsColon": "Bestand:",
     "alternativeTitles": "Alternative Titel",
-    "addAlternativeTitles": "+ Alternativtitel hinzufügen",
+    "addAlternativeTitles": "Alternativtitel hinzufügen",
     "classifications": "Klassifikationen",
-    "addClassifications": "+ Klassifikation hinzufügen",
+    "addClassifications": "Klassifikation hinzufügen",
     "selectClassification": "Klassifikationstyp auswählen",
     "number": "Anzahl *",
     "type": "Typ *",
     "contributors": "Mitwirkende",
-    "addContributors": "+ Mitwirkenden hinzufügen",
+    "addContributors": "Mitwirkenden hinzufügen",
     "physicalDescription": "Physische Beschreibung",
     "physicalDescriptions": "Physische Beschreibungen",
-    "addDescription": "+ Beschreibung hinzufügen",
+    "addDescription": "Beschreibung hinzufügen",
     "permanentLocation": "Permanenter Standort",
     "selectPermanentLocation": "Permanenten Standort auswählen",
     "selectPlatform": "Plattform auswählen",
@@ -43,7 +43,7 @@
     "uri": "URI",
     "identifier": "Identifier *",
     "identifiers": "Identifier",
-    "addIdentifier": "+ Identifier hinzufügen",
+    "addIdentifier": "Identifier hinzufügen",
     "selectResourceType": "Ressourcentyp auswählen",
     "formats": "Formate",
     "format": "Format",
@@ -63,22 +63,22 @@
     "numberOfPieces": "Stückzahl",
     "language": "Sprache",
     "languages": "Sprachen",
-    "addLanguage": "+ Sprache hinzufügen",
+    "addLanguage": "Sprache hinzufügen",
     "selectLanguage": "Sprache auswählen",
     "note": "Anmerkung",
-    "addNote": "+ Anmerkung hinzufügen",
+    "addNote": "Anmerkung hinzufügen",
     "addNotes": "Anmerkungen hinzufügen",
     "removeNotes": "Anmerkungen entfernen",
     "remove": "Entfernen",
     "publications": "Publikationen",
-    "addPublication": "+ Publikation hinzufügen",
+    "addPublication": "Publikation hinzufügen",
     "seriesStatements": "Gesamttitelangaben",
-    "addSeries": "+ Gesamttitel hinzufügen",
+    "addSeries": "Gesamttitel hinzufügen",
     "subjects": "Schlagwörter",
-    "addSubject": "+ Schlagwort hinzufügen",
+    "addSubject": "Schlagwort hinzufügen",
     "url": "URL",
     "urls": "URLs",
-    "addUrl": "+ URL hinzufügen",
+    "addUrl": "URL hinzufügen",
     "items": "Exemplare",
     "addNewItemDialog": "Dialogfenster neues Exemplar hinzufügen",
     "loanTypes": "Ausleihtypen",
@@ -118,7 +118,7 @@
     "seriesStatement": "Gesamttitelangabe",
     "editInstanceDialog": "Dialogfenster Instanz bearbeiten",
     "addNewHoldingsDialog": "Dialogfenster neuen Bestandsdatensatz hinzufügen",
-    "addItem": "+ Exemplar hinzufügen",
+    "addItem": "Exemplar hinzufügen",
     "viewItem": "Exemplar anzeigen",
     "itemData": "Exemplardaten",
     "temporaryLocation": "Vorläufiger Standort",
@@ -176,13 +176,13 @@
     "materialsSpecification": "Materials specified",
     "publisherRole": "Verlagsrolle",
     "publicationFrequency": "Publication frequency",
-    "addPublicationFrequency": "+ Add frequency",
-    "addPublicationRange": "+ Veröffentlichungszeitraum hinzufügen",
+    "addPublicationFrequency": "Add frequency",
+    "addPublicationRange": "Veröffentlichungszeitraum hinzufügen",
     "publicationRange": "Veröffentlichungszeitraum",
     "staffSuppress": "Staff suppress",
     "discoverySuppress": "Suppress from discovery",
     "previouslyHeld": "Previously held",
-    "addElectronicAccess": "+ Elektronischen Zugriff hinzufügen",
+    "addElectronicAccess": "Elektronischen Zugriff hinzufügen",
     "instanceStatus": "Instance status term",
     "selectInstanceStatus": "Instanzstatus auswählen",
     "selectModeOfIssuance": "Erscheinungsweise auswählen",
@@ -195,14 +195,14 @@
     "instances.columns.publishers": "Publishers",
     "instances.columns.relation": "Relation",
     "editions": "Editions",
-    "addEdition": "+ Add edition",
+    "addEdition": "Add edition",
     "indexTitle": "Index title",
     "dateOfPublication": "Date of publication",
     "otherRelatedInstances": "Other related instances",
     "instanceRelationships": "Instance relationships",
     "instanceFormat": "Format",
     "instanceFormats": "Formats",
-    "addInstanceFormat": "+ Add format",
+    "addInstanceFormat": "Add format",
     "selectInstanceFormat": "Select format",
     "copyItem": "Copy item",
     "resourceTypeTerm": "Resource type term",
@@ -242,11 +242,11 @@
     "acquisitionMethod": "Acquisition method",
     "acquisitionFormat": "Acquisition format",
     "electronicBookplate": "Electronic bookplate",
-    "add": "+ Add",
-    "addFormerHoldingsId": "+ Add former holdings ID",
-    "addHoldingsStatement": "+ Add holdings statement",
-    "addHoldingsStatementForIndexes": "+ Add holdings statement for indexes",
-    "addHoldingsStatementForSupplements": "+ Add holdings statement for supplements",
+    "add": "Add",
+    "addFormerHoldingsId": "Add former holdings ID",
+    "addHoldingsStatement": "Add holdings statement",
+    "addHoldingsStatementForIndexes": "Add holdings statement for indexes",
+    "addHoldingsStatementForSupplements": "Add holdings statement for supplements",
     "relatedInstances": "Related instances",
     "instanceRelationshipsAnalyticsBoundWith": "Instance relationships (analytics and bound-with)",
     "instanceStatusTypes": "Instance status types",
