--- a/translations/ui-inventory/es_ES.json
+++ b/translations/ui-inventory/es_ES.json
@@ -18,24 +18,24 @@
     "editInstance": "Editar Instancia",
     "showNotes": "Mostrar notas",
     "instanceDetails": "Detalles de la Instancia",
-    "addHoldings": "+ Agregar existencias",
+    "addHoldings": "Agregar existencias",
     "itemDotStatus": "Artículo . {status}",
     "instances": "Instancias",
     "instance": "Instancia:",
     "holdings": "Existencias",
     "holdingsColon": "Existencias:",
     "alternativeTitles": "Títulos alternativos",
-    "addAlternativeTitles": "+ Agregar título alternativo",
+    "addAlternativeTitles": "Agregar título alternativo",
     "classifications": "Clasificaciones",
-    "addClassifications": "+ Agregar clasificación",
+    "addClassifications": "Agregar clasificación",
     "selectClassification": "Seleccionar tipo de clasificación",
     "number": "Número *",
     "type": "Tipo *",
     "contributors": "Colaboradores",
-    "addContributors": "+ Agregar colaborador",
+    "addContributors": "Agregar colaborador",
     "physicalDescription": "Descripción física",
     "physicalDescriptions": "Descripciones físicas",
-    "addDescription": "+ Agregar descripción",
+    "addDescription": "Agregar descripción",
     "permanentLocation": "Localización permanente",
     "selectPermanentLocation": "Seleccionar localización permanente",
     "selectPlatform": "Seleccionar plataforma",
@@ -43,7 +43,7 @@
     "uri": "URI",
     "identifier": "Identificador *",
     "identifiers": "Identificadores",
-    "addIdentifier": "+ Agregar identificador",
+    "addIdentifier": "Agregar identificador",
     "selectResourceType": "Seleccionar tipo de recurso",
     "formats": "Formatos",
     "format": "Formato",
@@ -63,22 +63,22 @@
     "numberOfPieces": "Número de piezas",
     "language": "Idioma",
     "languages": "Idiomas",
-    "addLanguage": "+ Agregar idioma",
+    "addLanguage": "Agregar idioma",
     "selectLanguage": "Seleccionar idioma",
     "note": "Nota",
-    "addNote": "+ Agregar nota",
+    "addNote": "Agregar nota",
     "addNotes": "Agregar Notas",
     "removeNotes": "Eliminar Notas {num}",
     "remove": "Quitar",
     "publications": "Publicaciones",
-    "addPublication": "+ Agregar publicación",
+    "addPublication": "Agregar publicación",
     "seriesStatements": "Declaraciones de series",
-    "addSeries": "+ Agregar series",
+    "addSeries": "Agregar series",
     "subjects": "Temas",
-    "addSubject": "+ Agregar tema",
+    "addSubject": "Agregar tema",
     "url": "URL",
     "urls": "URLs",
-    "addUrl": "+ Agregar URL",
+    "addUrl": "Agregar URL",
     "items": "Artículos",
     "addNewItemDialog": "Agregar Cuadro de diálogo de un Nuevo Artículo",
     "loanTypes": "Tipos de préstamos",
@@ -118,7 +118,7 @@
     "seriesStatement": "Mención de serie",
     "editInstanceDialog": "Editar Diálogo de Instancia",
     "addNewHoldingsDialog": "Añadir Nuevo Diálogo de Existencias",
-    "addItem": "+ Agregar artículo",
+    "addItem": "Agregar artículo",
     "viewItem": "Ver artículo",
     "itemData": "Datos del artículo",
     "temporaryLocation": "Localización temporal",
@@ -176,13 +176,13 @@
     "materialsSpecification": "Materials specified",
     "publisherRole": "Publisher role",
     "publicationFrequency": "Publication frequency",
-    "addPublicationFrequency": "+ Add frequency",
-    "addPublicationRange": "+ Add range",
+    "addPublicationFrequency": "Add frequency",
+    "addPublicationRange": "Add range",
     "publicationRange": "Publication range",
     "staffSuppress": "Staff suppress",
     "discoverySuppress": "Suppress from discovery",
     "previouslyHeld": "Previously held",
-    "addElectronicAccess": "+ Add electronic access",
+    "addElectronicAccess": "Add electronic access",
     "instanceStatus": "Instance status term",
     "selectInstanceStatus": "Select instance status",
     "selectModeOfIssuance": "Select mode of issuance",
@@ -195,14 +195,14 @@
     "instances.columns.publishers": "Publishers",
     "instances.columns.relation": "Relation",
     "editions": "Editions",
-    "addEdition": "+ Add edition",
+    "addEdition": "Add edition",
     "indexTitle": "Index title",
     "dateOfPublication": "Date of publication",
     "otherRelatedInstances": "Other related instances",
     "instanceRelationships": "Instance relationships",
     "instanceFormat": "Format",
     "instanceFormats": "Formats",
-    "addInstanceFormat": "+ Add format",
+    "addInstanceFormat": "Add format",
     "selectInstanceFormat": "Select format",
     "copyItem": "Copy item",
     "resourceTypeTerm": "Resource type term",
@@ -242,11 +242,11 @@
     "acquisitionMethod": "Acquisition method",
     "acquisitionFormat": "Acquisition format",
     "electronicBookplate": "Electronic bookplate",
-    "add": "+ Add",
-    "addFormerHoldingsId": "+ Add former holdings ID",
-    "addHoldingsStatement": "+ Add holdings statement",
-    "addHoldingsStatementForIndexes": "+ Add holdings statement for indexes",
-    "addHoldingsStatementForSupplements": "+ Add holdings statement for supplements",
+    "add": "Add",
+    "addFormerHoldingsId": "Add former holdings ID",
+    "addHoldingsStatement": "Add holdings statement",
+    "addHoldingsStatementForIndexes": "Add holdings statement for indexes",
+    "addHoldingsStatementForSupplements": "Add holdings statement for supplements",
     "relatedInstances": "Related instances",
     "instanceRelationshipsAnalyticsBoundWith": "Instance relationships (analytics and bound-with)",
     "instanceStatusTypes": "Instance status types",
