Use documented react-intl patterns instead of stripes.intl

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -5,6 +5,10 @@
   "instances.columns.contributors": "Contributors",
   "instances.columns.publishers": "Publishers",
   "instances.columns.relation": "Relation",
+  "instances.resourceType": "Resource Type",
+  "instances.language": "Language",
+  "instances.location": "Location",
+  "holdingsRecord.awaitingResources": "Awaiting resources",
   "resultCount": "{count, number} {count, plural, one {record found} other {records found}}",
   "item.availability": "Loan data and availability",
   "item.availability.itemStatus": "Item status",
@@ -16,6 +20,7 @@
   "fillIn": "Please fill this in to continue",
   "selectToContinue": "Please select to continue",
   "add": "Add",
+  "addLabel": "Add {label}",
   "onePublicationFieldToContinue": "Please fill in one or more publication fields to continue",
   "barcodeTaken": "This barcode has already been taken",
   "hridTaken": "This HRID has already been taken",
@@ -31,12 +36,11 @@
   "addHoldings": "Add holdings",
   "itemDotStatus": "Item . {status}",
   "instances": "Instances",
-  "instance": "Instance:",
+  "instance": "Instance: ",
   "holdings": "Holdings",
   "holdingsType": "Holdings type",
   "holdingsTypes": "Holdings types",
   "ILLPolicy": "ILL policy",
-  "holdingsColon": "Holdings:",
   "staffSuppress": "Staff suppress",
   "discoverySuppress": "Suppress from discovery",
   "previouslyHeld": "Previously held",
@@ -60,7 +64,10 @@
   "createItem": "Create item",
   "updateItem": "Update item",
   "holdingsTitle": " Holdings: {location} > {callNumber}",
-
+  "waitingForResources": "Waiting for resources",
+  "fetchingMarcRecord": "Fetching MARC record",
+  "viewMarcSource": "View MARC source",
+  "marcSourceRecord": "MARC source record",
   "contributors": "Contributors",
   "addContributor": "Add contributor",
   "physicalDescription": "Physical description",
@@ -270,6 +277,7 @@
   "resourceIdentifier": "Resource identifier",
   "resourceTitle": "Resource title",
   "contributor": "Contributor",
+  "publication": "Publication",
   "publisher": "Publisher",
   "publisherRole": "Publisher role",
   "conditions": "Conditions",
@@ -311,5 +319,7 @@
   "itemCallNumber": "Item call number",
   "otherRelatedInstances": "Other related instances",
   "relatedInstances": "Related instances",
-  "duplicateItem": "Duplicate item"
+  "duplicateItem": "Duplicate item",
+  "error.noMatch.oops": "Uh-oh!",
+  "error.noMatch.how": "How did you get to {location}?"
 }
