--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -55,6 +55,10 @@
   "type": "Type",
   "typeFreeText": "Type, free text",
   "name": "Name",
+  "source": "Source",
+  "term": "Term",
+  "category": "Category",
+  "freeText": "Free text",
   "nameType": "Name Type",
   "primary": "Primary",
   "childInstances": "Child instances",
@@ -139,6 +143,7 @@
   "loanTypePermanentRequired": "Permanent loan type *",
   "barcode": "Barcode",
   "itemBarcode": "Item barcode",
+  "item.barcode": "Item: barcode",
   "itemHrid": "Item HRID",
   "itemIdentifier": "Item identifier",
   "formerId": "Former identifier",
@@ -276,11 +281,14 @@
   "urlPublicNote": "URL public note",
   "materialsSpecification": "Materials specified",
   "resourceIdentifier": "Resource identifier",
+  "resourceIdentifierType": "Resource identifier type",
   "resourceTitle": "Resource title",
   "contributor": "Contributor",
   "publication": "Publication",
   "publisher": "Publisher",
+  "placeOfPublication": "Place of publication",
   "publisherRole": "Publisher role",
+  "publisherDate": "Publisher date",
   "conditions": "Conditions",
   "place": "Place",
   "date": "Date",
@@ -289,6 +297,7 @@
   "resourceTypes": "Resource types",
   "subjectHeadings": "Subject headings",
   "classification": "Classification",
+  "classificationIdentifierType": "Classification identifier type",
   "seriesStatement": "Series Statement",
   "editInstanceDialog": "Edit instance dialog",
   "addNewHoldingsDialog": "Add new holdings dialog",
