Add circulation notes (check in/check out notes) UIIN-422

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -171,6 +171,7 @@
   "itemPublicNote": "Item public note",
   "addNote": "Add note",
   "addNotes": "Add Notes",
+  "addCirculationNote": "Add check in / check out note",
   "removeNotes": "Remove notes {num}",
   "remove": "Remove",
   "publications": "Publications",
