Fixes to labels, translations UIIN-424

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -10,7 +10,7 @@
   "instances.location": "Location",
   "holdingsRecord.awaitingResources": "Awaiting resources",
   "resultCount": "{count, number} {count, plural, one {record found} other {records found}}",
-  "item.availability": "Loan data and availability",
+  "item.loanAndAvailability": "Loan and availability",
   "item.availability.itemStatus": "Item status",
   "item.availability.itemStatusDate": "Item status date",
   "item.availability.requests": "Requests",
@@ -107,7 +107,6 @@
   "shelvingOrder": "Shelving order",
   "shelvingTitle": "Shelving title",
   "holdingsCallNumber": "Holdings call number",
-
   "callNumberType": "Call number type",
   "callNumberPrefix": "Call number prefix",
   "callNumber": "Call number",
@@ -289,11 +288,11 @@
   "publisher": "Publisher",
   "placeOfPublication": "Place of publication",
   "publisherRole": "Publisher role",
-  "publisherDate": "Publisher date",
+  "publisherDate": "Publication date",
   "conditions": "Conditions",
   "place": "Place",
   "date": "Date",
-  "dateOfPublication": "Date of publication",
+  "dateOfPublication": "Publication date",
   "resourceType": "Resource type",
   "resourceTypes": "Resource types",
   "subjectHeadings": "Subject headings",
