--- a/translations/ui-inventory/en_US.json
+++ b/translations/ui-inventory/en_US.json
@@ -1,7 +1,7 @@
 {
     "inventory.label": "Inventory",
     "resultCount": "{count, number} {count, plural, one {Record found} other {Records found}}",
-    "item.availability": "Availability",
+    "item.loanAndAvailability": "Loan and availability",
     "item.availability.itemStatus": "Item status",
     "item.availability.itemStatusDate": "Item status date",
     "item.availability.requests": "Requests",
@@ -68,6 +68,7 @@
     "note": "Note",
     "addNote": "+ Add note",
     "addNotes": "Add Notes",
+    "addCirculationNote": "Add check in / check out note",
     "removeNotes": "Remove Notes {num}",
     "remove": "Remove",
     "publications": "Publications",
@@ -197,7 +198,7 @@
     "editions": "Editions",
     "addEdition": "+ Add edition",
     "indexTitle": "Index title",
-    "dateOfPublication": "Date of publication",
+    "dateOfPublication": "Publication date",
     "otherRelatedInstances": "Other related instances",
     "instanceRelationships": "Instance relationships",
     "instanceFormat": "Format",
@@ -344,7 +345,7 @@
     "resourceIdentifierType": "Resource identifier type",
     "publication": "Publication",
     "placeOfPublication": "Place of publication",
-    "publisherDate": "Publisher date",
+    "publisherDate": "Publication date",
     "classificationIdentifierType": "Classification identifier type",
     "error.noMatch.oops": "Uh-oh!",
     "error.noMatch.how": "How did you get to {location}?"
