Add option to mark an item as missing, refs UIIN-419

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -173,6 +173,10 @@
   "addCirculationNote": "Add check in / check out note",
   "removeNotes": "Remove notes {num}",
   "remove": "Remove",
+  "markAsMissing": "Mark as Missing",
+  "missingModal.message": "<strong>{title} ({materialType})</strong> (Barcode: {barcode}) will be marked as <strong>missing</strong>.",
+  "missingModal.heading": "Confirm item as missing",
+  "missingModal.confirm": "Confirm",
   "publications": "Publications",
   "addPublication": "Add publication",
   "seriesStatements": "Series statements",
