Add delete Item dialog UIIN-335
  Performs hard delete. No dependency checks implemented.
  Unit tests not done yet.

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -177,6 +177,10 @@
   "missingModal.message": "<strong>{title} ({materialType})</strong> (Barcode: {barcode}) will be marked as <strong>missing</strong>.",
   "missingModal.heading": "Confirm item as missing",
   "missingModal.confirm": "Confirm",
+  "deleteItem": "Delete Item",
+  "confirmItemDeleteModal.message": "<strong>{title} ({materialType})</strong> (Barcode: {barcode}) will be <strong>deleted</strong>.",
+  "confirmItemDeleteModal.heading": "Confirm deletion of item",
+  "confirmItemDeleteModal.confirm": "Confirm",
   "publications": "Publications",
   "addPublication": "Add publication",
   "seriesStatements": "Series statements",
