Add cannot-delete-item modal UIIN-335
  So far only invoked if item checked out

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -181,6 +181,7 @@
   "confirmItemDeleteModal.message": "Item HRID <strong>{hrid}, barcode {barcode}</strong> has no dependencies and will be <strong>deleted</strong>.",
   "confirmItemDeleteModal.heading": "Confirm deletion of item",
   "confirmItemDeleteModal.confirm": "Confirm",
+  "noItemDeleteModal.message": "Item HRID <strong>{hrid}, barcode {barcode}</strong> is {status} and cannot be deleted",
   "publications": "Publications",
   "addPublication": "Add publication",
   "seriesStatements": "Series statements",
