--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -177,6 +177,11 @@
   "missingModal.message": "<strong>{title} ({materialType})</strong> (Barcode: {barcode}) will be marked as <strong>missing</strong>.",
   "missingModal.heading": "Confirm item as missing",
   "missingModal.confirm": "Confirm",
+  "deleteHoldingsRecord": "Delete holdings record",
+  "confirmHoldingsRecordDeleteModal.message": "Holdings record HRID <strong>{hrid}</strong>, location <strong>{location}</strong> has no item records associated or other dependencies and will be <strong>deleted</strong>.",
+  "confirmHoldingsRecordDeleteModal.heading": "Confirm deletion of holdings record",
+  "confirmHoldingsRecordDeleteModal.confirm": "Confirm",
+  "noHoldingsRecordDeleteModal.message": "Holdings record HRID <strong>{hrid}</strong>, location <strong>{location}</strong> has dependents and cannot be deleted",
   "publications": "Publications",
   "addPublication": "Add publication",
   "seriesStatements": "Series statements",
