--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -177,6 +177,11 @@
   "missingModal.message": "<strong>{title} ({materialType})</strong> (Barcode: {barcode}) will be marked as <strong>missing</strong>.",
   "missingModal.heading": "Confirm item as missing",
   "missingModal.confirm": "Confirm",
+  "deleteItem": "Delete Item",
+  "confirmItemDeleteModal.message": "Item HRID <strong>{hrid}, barcode {barcode}</strong> has no dependencies and will be <strong>deleted</strong>.",
+  "confirmItemDeleteModal.heading": "Confirm deletion of item",
+  "confirmItemDeleteModal.confirm": "Confirm",
+  "noItemDeleteModal.message": "Item HRID <strong>{hrid}, barcode {barcode}</strong> is {status} and cannot be deleted",
   "publications": "Publications",
   "addPublication": "Add publication",
   "seriesStatements": "Series statements",
