Check additional dependencies during item deletion

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -186,7 +186,9 @@
   "confirmItemDeleteModal.message": "Item HRID <strong>{hrid}, barcode {barcode}</strong> has no dependencies and will be <strong>deleted</strong>.",
   "confirmItemDeleteModal.heading": "Confirm deletion of item",
   "confirmItemDeleteModal.confirm": "Confirm",
-  "noItemDeleteModal.message": "Item HRID <strong>{hrid}, barcode {barcode}</strong> is {status} and cannot be deleted",
+  "noItemDeleteModal.checkoutMessage": "Item HRID <strong>{hrid}</strong> with barcode <strong>{barcode}</strong> is checked out and can not be deleted until checked in again, and item status is 'Available'",
+  "noItemDeleteModal.requestMessage": "Item HRID <strong>{hrid}</strong> with barcode <strong>{barcode}</strong> has a request associated the request has been fullfilled, or the request has been cancelled.",
+  "noItemDeleteModal.orderMessage": "Item HRID <strong>{hrid}</strong> with barcode <strong>{barcode}</strong> is on order and can not be deleted until depencency with the order app is cleared, and the order record maybe is deleted, or the item is received and the item status is 'Available'",
   "publications": "Publications",
   "addPublication": "Add publication",
   "seriesStatements": "Series statements",
