Normalize context menu item labels UIIN-524

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -28,10 +28,10 @@
   "updateInstance": "Update instance",
   "itemRecord": "Item record",
   "code": "code",
-  "duplicateInstance": "Duplicate instance",
+  "duplicateInstance": "Copy",
   "cancel": "Cancel",
   "newInstance": "New instance",
-  "editInstance": "Edit instance",
+  "editInstance": "Edit",
   "instanceDetails": "Instance details",
   "addHoldings": "Add holdings",
   "itemDotStatus": "Item . {status}",
@@ -173,16 +173,16 @@
   "addCirculationNote": "Add check in / check out note",
   "removeNotes": "Remove notes {num}",
   "remove": "Remove",
-  "markAsMissing": "Mark as Missing",
+  "markAsMissing": "Mark as missing",
   "missingModal.message": "<strong>{title} ({materialType})</strong> (Barcode: {barcode}) will be marked as <strong>missing</strong>.",
   "missingModal.heading": "Confirm item as missing",
   "missingModal.confirm": "Confirm",
-  "deleteHoldingsRecord": "Delete holdings record",
+  "deleteHoldingsRecord": "Delete",
   "confirmHoldingsRecordDeleteModal.message": "Holdings record HRID <strong>{hrid}</strong>, location <strong>{location}</strong> has no item records associated or other dependencies and will be <strong>deleted</strong>.",
   "confirmHoldingsRecordDeleteModal.heading": "Confirm deletion of holdings record",
   "confirmHoldingsRecordDeleteModal.confirm": "Confirm",
   "noHoldingsRecordDeleteModal.message": "Holdings record HRID <strong>{hrid}</strong>, location <strong>{location}</strong> has dependents and cannot be deleted",
-  "deleteItem": "Delete Item",
+  "deleteItem": "Delete",
   "confirmItemDeleteModal.message": "Item HRID <strong>{hrid}, barcode {barcode}</strong> has no dependencies and will be <strong>deleted</strong>.",
   "confirmItemDeleteModal.heading": "Confirm deletion of item",
   "confirmItemDeleteModal.confirm": "Confirm",
@@ -269,8 +269,8 @@
   "createNewHoldingsRecord": "Create new holdings record",
   "createHoldingsRecord": "Create holdings record",
   "updateHoldingsRecord": "Update holdings record",
-  "duplicateHoldings": "Duplicate holdings",
-  "editHoldings": "Edit holdings",
+  "duplicateHoldings": "Copy",
+  "editHoldings": "Edit",
   "instanceData": "Administrative data",
   "instanceId": "Instance ID",
   "instanceHrid": "Instance HRID",
@@ -316,7 +316,7 @@
   "editInstanceDialog": "Edit instance dialog",
   "addNewHoldingsDialog": "Add new holdings dialog",
   "addItem": "Add item",
-  "editItem": "Edit item",
+  "editItem": "Edit",
   "viewItem": "View item",
   "viewSource": "View source",
   "itemData": "Item data",
@@ -330,7 +330,7 @@
   "removeIdentifier": "Remove identifier {num}",
   "editItemDialog": "Edit item dialog",
   "copyItemDialog": "Copy item dialog",
-  "copyItem": "Copy item",
+  "copyItem": "Copy",
   "newRequest": "New Request",
   "confirmLocation.selectBtn": "Select",
   "confirmLocation.message": "This location has a status of inactive. Are you sure you want to select this location?",
@@ -344,7 +344,7 @@
   "itemCallNumber": "Item call number",
   "otherRelatedInstances": "Other related instances",
   "relatedInstances": "Related instances",
-  "duplicateItem": "Duplicate item",
+  "duplicateItem": "Copy",
   "error.noMatch.oops": "Uh-oh!",
   "error.noMatch.how": "How did you get to {location}?"
 }
