Rename 'Copy' to 'Duplicate' in context menus UIIN-524

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -28,7 +28,7 @@
   "updateInstance": "Update instance",
   "itemRecord": "Item record",
   "code": "code",
-  "duplicateInstance": "Copy",
+  "duplicateInstance": "Duplicate",
   "cancel": "Cancel",
   "newInstance": "New instance",
   "editInstance": "Edit",
@@ -269,7 +269,7 @@
   "createNewHoldingsRecord": "Create new holdings record",
   "createHoldingsRecord": "Create holdings record",
   "updateHoldingsRecord": "Update holdings record",
-  "duplicateHoldings": "Copy",
+  "duplicateHoldings": "Duplicate",
   "editHoldings": "Edit",
   "instanceData": "Administrative data",
   "instanceId": "Instance ID",
@@ -330,7 +330,7 @@
   "removeIdentifier": "Remove identifier {num}",
   "editItemDialog": "Edit item dialog",
   "copyItemDialog": "Copy item dialog",
-  "copyItem": "Copy",
+  "copyItem": "Duplicate",
   "newRequest": "New Request",
   "confirmLocation.selectBtn": "Select",
   "confirmLocation.message": "This location has a status of inactive. Are you sure you want to select this location?",
@@ -344,7 +344,7 @@
   "itemCallNumber": "Item call number",
   "otherRelatedInstances": "Other related instances",
   "relatedInstances": "Related instances",
-  "duplicateItem": "Copy",
+  "duplicateItem": "Duplicate",
   "error.noMatch.oops": "Uh-oh!",
   "error.noMatch.how": "How did you get to {location}?"
 }
