--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -34,10 +34,11 @@
   "editInstance": "Edit",
   "instanceDetails": "Instance details",
   "addHoldings": "Add holdings",
-  "itemDotStatus": "Item . {status}",
+  "itemDotStatus": "Item record {barcode} {status}",
   "instances": "Instances",
   "instance": "Instance: ",
   "holdings": "Holdings",
+  "holdingRecord": "Holding record {location} {callNumber}",
   "holdingsType": "Holdings type",
   "holdingsTypes": "Holdings types",
   "ILLPolicy": "ILL policy",
@@ -134,6 +135,7 @@
   "selectInstanceFormat": "Select format",
   "titleData": "Title data",
   "instanceRecord": "Instance record",
+  "instanceRecordTitle": "Instance record {title} {publisherAndDate}",
   "contentData": "Content data",
   "descriptiveData": "Descriptive data",
   "selectMaterialType": "Select material type",
