--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -266,7 +266,7 @@
   "copyNotes": "Copy notes",
   "receiptStatus": "Receipt status",
   "acquisitionMethod": "Acquisition method",
-  "acquisitionFormat": "Acquisition format",
+  "acquisitionFormat": "Order format",
   "electronicBookplate": "Electronic bookplate",
   "editHoldingsRecordDialog": "Edit holdings record dialog",
   "copyHoldingsRecordDialog": "Copy holdings record dialog",
