Add settings pages, note types for holdings, items. UIIN-453

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -41,6 +41,7 @@
   "holdingRecord": "Holding record {location} {callNumber}",
   "holdingsType": "Holdings type",
   "holdingsTypes": "Holdings types",
+  "holdingsNoteTypes": "Holdings note types",
   "ILLPolicy": "ILL policy",
   "staffSuppress": "Staff suppress",
   "discoverySuppress": "Suppress from discovery",
@@ -216,6 +217,7 @@
   "loanType": "Loan type",
   "loans": "Loans",
   "materialTypes": "Material types",
+  "itemNoteTypes": "Item note types",
   "alternativeTitleTypes": "Alternative title types",
   "alternativeTitleType": "Alternative title type",
   "materialType": "Material type",
