UIIN-576: Change accordion header value to Condition

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -312,7 +312,7 @@
   "placeOfPublication": "Place of publication",
   "publisherRole": "Publisher role",
   "publisherDate": "Publication date",
-  "conditions": "Conditions",
+  "condition": "Condition",
   "place": "Place",
   "date": "Date",
   "dateOfPublication": "Publication date",
