UIIN-595: Replaced hardcoded translations of search indexes by formatted messages

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -119,6 +119,9 @@
   "identifier": "Identifier",
   "identifiers": "Identifiers",
   "addIdentifier": "Add identifier",
+  "search.isbn": "- ISBN",
+  "search.issn": "- ISSN",
+  "search.all": "All (title, contributor, identifier)",
   "title": "Title",
   "indexTitle": "Index title",
   "selectResourceType": "Select resource type",
@@ -200,6 +203,7 @@
   "seriesStatements": "Series statements",
   "addSeries": "Add series",
   "subjects": "Subjects",
+  "subject": "Subject",
   "addSubject": "Add subject",
   "url": "URL",
   "urls": "URLs",
