UIIN-595: Remove the prefix of sub search indexes from translations

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -119,8 +119,8 @@
   "identifier": "Identifier",
   "identifiers": "Identifiers",
   "addIdentifier": "Add identifier",
-  "search.isbn": "- ISBN",
-  "search.issn": "- ISSN",
+  "isbn": "ISBN",
+  "issn": "ISSN",
   "search.all": "All (title, contributor, identifier)",
   "title": "Title",
   "indexTitle": "Index title",
