UIIN-603: Fix all issues except #1 :: DONE

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -75,7 +75,8 @@
   "waitingForResources": "Waiting for resources",
   "fetchingMarcRecord": "Fetching MARC record",
   "viewMarcSource": "View MARC source",
-  "marcSourceRecord": "MARC source record",
+  "marcSourceRecord": "MARC bibliographic record",
+  "marcSourceRecord.notFoundError": "Cannot find MARC bibliographic record for \"{name}\" instance!",
   "contributors": "Contributors",
   "addContributor": "Add contributor",
   "physicalDescription": "Physical description",
