Add settings page for instance note types UIIN-461

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -138,6 +138,7 @@
   "instanceFormat": "Format",
   "instanceFormats": "Formats",
   "addInstanceFormat": "Add format",
+  "instanceNoteTypes": "Instance note types",
   "selectInstanceFormat": "Select format",
   "titleData": "Title data",
   "instanceRecord": "Instance record",
