--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -138,6 +138,7 @@
   "instanceFormat": "Format",
   "instanceFormats": "Formats",
   "addInstanceFormat": "Add format",
+  "instanceNoteTypes": "Instance note types",
   "selectInstanceFormat": "Select format",
   "titleData": "Title data",
   "instanceRecord": "Instance record",
@@ -292,6 +293,7 @@
   "instanceStatus": "Instance status term",
   "selectInstanceStatus": "Select instance status",
   "modeOfIssuance": "Mode of issuance",
+  "modesOfIssuance": "Modes of issuance",
   "selectModeOfIssuance": "Select mode of issuance",
   "metadataSource": "Metadata source",
   "tba": "TBA",
@@ -310,6 +312,7 @@
   "materialsSpecification": "Materials specified",
   "resourceIdentifier": "Resource identifier",
   "resourceIdentifierType": "Resource identifier type",
+  "resourceIdentifierTypes": "Resource identifier types",
   "resourceTitle": "Resource title",
   "contributor": "Contributor",
   "publication": "Publication",
@@ -326,6 +329,7 @@
   "subjectHeadings": "Subject headings",
   "classification": "Classification",
   "classificationIdentifierType": "Classification identifier type",
+  "classificationIdentifierTypes": "Classification identifier types",
   "seriesStatement": "Series Statement",
   "editInstanceDialog": "Edit instance dialog",
   "addNewHoldingsDialog": "Add new holdings dialog",
