Add settings page, nature-of-content terms UIIN-471

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -139,6 +139,9 @@
   "instanceFormats": "Formats",
   "addInstanceFormat": "Add format",
   "instanceNoteTypes": "Instance note types",
+  "instanceNoteType": "Instance note type",
+  "natureOfContentTerms": "Nature of content terms",
+  "natureOfContentTerm": "Nature of content term",
   "selectInstanceFormat": "Select format",
   "titleData": "Title data",
   "instanceRecord": "Instance record",
