Reorder lists of settings pages for Inventory

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -140,8 +140,8 @@
   "addInstanceFormat": "Add format",
   "instanceNoteTypes": "Instance note types",
   "instanceNoteType": "Instance note type",
-  "natureOfContentTerms": "Nature of content terms",
-  "natureOfContentTerm": "Nature of content term",
+  "natureOfContentTerms": "Nature of content",
+  "natureOfContentTerm": "Nature of content",
   "selectInstanceFormat": "Select format",
   "titleData": "Title data",
   "instanceRecord": "Instance record",
