--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -368,5 +368,7 @@
   "relatedInstances": "Related instances",
   "duplicateItem": "Duplicate",
   "error.noMatch.oops": "Uh-oh!",
-  "error.noMatch.how": "How did you get to {location}?"
+  "error.noMatch.how": "How did you get to {location}?",
+  "items.damageStatus.damaged": "Damaged",
+  "items.damageStatus.notdamaged": "Not damaged"
 }
