UIIN-632 relabel instance/holdings/item notes
Relabel the instance-, holdings-, and item-notes accordions to reduce
confusion with the Notes helper app.

Fixes UIIN-632, UIIN-633, UIIN-634

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -370,5 +370,6 @@
   "error.noMatch.oops": "Uh-oh!",
   "error.noMatch.how": "How did you get to {location}?",
   "items.damageStatus.damaged": "Damaged",
-  "items.damageStatus.notdamaged": "Not damaged"
+  "items.damageStatus.notdamaged": "Not damaged",
+  "instanceNotes": "Instance notes"
 }
